Fixing account switcher z-index

--- a/src/webpage/style.css
+++ b/src/webpage/style.css
@@ -3648,7 +3648,7 @@ fieldset input[type="radio"] {
 	color: var(--primary-text-soft);
 }
 .accountSwitcher {
-	z-index: 102;
+	z-index: 111;
 }
 .accountSwitcher h1 {
 	margin-bottom: 4px;
